--- a/app/AppManifest.json
+++ b/app/AppManifest.json
@@ -1,15 +1,9 @@
 [
     {
-        "name": "SampleApp",
+        "name": "tyrepressurecheck",
         "vehicleModel": {
-            "src": "https://github.com/COVESA/vehicle_signal_specification/releases/download/v3.0/vss_rel_3.0.json",
-            "datapoints": [
-                {
-                    "path": "Vehicle.Speed",
-                    "required": "true",
-                    "access": "read"
-                }
-            ]
+            "src": "./app/vspec.json",
+            "datapoints": []
         },
         "runtime": [
             "grpc://sdv.databroker.v1.Broker/GetDatapoints",
